Added a delay prop to sidebar to expand with delay (#3367)
Co-authored-by: maxime.riehl@freshmile.com <maxime.riehl@freshmile.com>

--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -52,7 +52,7 @@ $css-vars-map: (
         }
         &.is-mini {
             width: var(--sidebar-mobile-width);
-            &.is-mini-expand:hover {
+            &.is-mini-expand:hover:not(.is-mini-delayed) {
                 // transition: width $speed-slow $easing;
                 transition-property: width;
                 transition-duration: calc(var(--speed, #{$speed}) * 2);
